Fixed genre buttons gap

--- a/src/Components/FrontPage/GenreContainer.css
+++ b/src/Components/FrontPage/GenreContainer.css
@@ -15,7 +15,7 @@
 
 .genres {
     display: flex;
-    gap: 0.5rem;
+    gap: 1.2rem;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
